Fix blank space on left side on small devices

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,15 @@ body {
   color: white;
 }
 
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
+
 @keyframes gradient {
   0% {
     background-position: 0% 50%;
